@@ -19,6 +19,7 @@ import com.hust.baseweb.applications.tms.repo.ShipmentRepo;
 import com.hust.baseweb.applications.tms.repo.status.ShipmentItemStatusRepo;
 import com.hust.baseweb.entity.Party;
 import com.hust.baseweb.entity.StatusItem;
+import com.hust.baseweb.entity.UserLogin;
 import com.hust.baseweb.repo.StatusItemRepo;
 import lombok.AllArgsConstructor;
 import lombok.extern.log4j.Log4j2;
@@ -73,6 +74,8 @@ public class InventoryItemServiceImpl implements InventoryItemService {
 
     private ReceiptService receiptService;
 
+    private UomRepo uomRepo;
+
     @Override
     @Transactional
     public List<InventoryItem> importInventoryItems(ImportInventoryItemsInputModel inventoryItemsInput) {
@@ -124,6 +127,8 @@ public class InventoryItemServiceImpl implements InventoryItemService {
                                                   inventoryItem.getQuantityOnHandTotal());
         }
 
+        Uom currencyUomId = uomRepo.findById("CUR_vnd").orElseThrow(NoSuchElementException::new);
+
         List<InventoryItem> inventoryItems = Arrays
             .stream(inventoryItemsInput.getInventoryItems())
             .map(inventoryItemInput -> {
@@ -135,6 +140,8 @@ public class InventoryItemServiceImpl implements InventoryItemService {
                 inventoryItem.setLotId(inventoryItemInput.getLotId());
                 inventoryItem.setUomId(product.getUom().getUomId());
                 inventoryItem.setQuantityOnHandTotal(inventoryItemInput.getQuantityOnHandTotal());
+                inventoryItem.setUnitCost(inventoryItemInput.getUnitCost());
+                inventoryItem.setCurrencyUomId(currencyUomId);
                 return inventoryItem;
             })
             .collect(Collectors.toList());
@@ -180,7 +187,7 @@ public class InventoryItemServiceImpl implements InventoryItemService {
     @Override
     @Transactional
     @org.springframework.transaction.annotation.Transactional
-    public String exportInventoryItems(ExportInventoryItemsInputModel inventoryItemsInput) {
+    public String exportInventoryItems(ExportInventoryItemsInputModel inventoryItemsInput, UserLogin userLogin) {
         Date now = new Date();
 
 //        List<InventoryItem> inventoryItems = inventoryItemRepo.findAll();// to be improved, find by (productId, facilityId)
@@ -237,6 +244,9 @@ public class InventoryItemServiceImpl implements InventoryItemService {
                 productFacility.getLastInventoryCount() - quantity; // remain total inventory count"
 
             List<InventoryItem> selectedInventoryItems = inventoryItemsMap.get(Arrays.asList(facilityId, productId));
+            if (selectedInventoryItems == null) {
+                continue;
+            }
             selectedInventoryItems.sort(Comparator.comparingInt(InventoryItem::getQuantityOnHandTotal));
 
             for (InventoryItem inventoryItem : selectedInventoryItems) {
@@ -255,7 +265,8 @@ public class InventoryItemServiceImpl implements InventoryItemService {
                         quantity,
                         orderItem,
                         orderHeader,
-                        inventoryItem);
+                        inventoryItem,
+                        userLogin);
                     shipmentItems.add(shipmentItem);
 
                     break;
@@ -270,7 +281,8 @@ public class InventoryItemServiceImpl implements InventoryItemService {
                         inventoryItem.getQuantityOnHandTotal(),
                         orderItem,
                         orderHeader,
-                        inventoryItem);
+                        inventoryItem,
+                        userLogin);
                     shipmentItems.add(shipmentItem);
 
                     orderItem.setExportedQuantity(orderItem.getExportedQuantity() +
@@ -366,7 +378,8 @@ public class InventoryItemServiceImpl implements InventoryItemService {
         StatusItem statusItem,
         int quantity,
         OrderItem orderItem,
-        OrderHeader orderHeader, InventoryItem inventoryItem
+        OrderHeader orderHeader, InventoryItem inventoryItem,
+        UserLogin userLogin
     ) {
         ShipmentItem shipmentItem = new ShipmentItem();
         shipmentItem.setShipment(shipment);
@@ -374,6 +387,7 @@ public class InventoryItemServiceImpl implements InventoryItemService {
         shipmentItem.setStatusItem(statusItem);
         shipmentItem.setQuantity(quantity);
         shipmentItem.setOrderItem(orderItem);
+        shipmentItem.setUserLogin(userLogin);
 
         //shipmentItem.setCustomer(orderHeader.getPartyCustomer());
         shipmentItem.setPartyCustomer(orderHeader.getPartyCustomer());
@@ -479,13 +493,15 @@ public class InventoryItemServiceImpl implements InventoryItemService {
         List<Facility> queryFacilities
     ) {
         Map<List<String>, List<InventoryItem>> inventoryItemsMap = new HashMap<>();
-        inventoryItemRepo.findAllByProductInAndFacilityInAndQuantityOnHandTotalGreaterThan(
-            queryProducts, queryFacilities, 0).forEach(inventoryItem ->
-                                                           inventoryItemsMap.computeIfAbsent(
-                                                               Arrays.asList(
-                                                                   inventoryItem.getFacility().getFacilityId(),
-                                                                   inventoryItem.getProduct().getProductId()),
-                                                               key -> new ArrayList<>()).add(inventoryItem));
+        inventoryItemRepo
+            .findAllByProductInAndFacilityInAndQuantityOnHandTotalGreaterThan(queryProducts, queryFacilities, 0)
+            .forEach(inventoryItem -> inventoryItemsMap
+                .computeIfAbsent(
+                    Arrays.asList(
+                        inventoryItem.getFacility().getFacilityId(),
+                        inventoryItem.getProduct().getProductId()),
+                    key -> new ArrayList<>())
+                .add(inventoryItem));
         return inventoryItemsMap;
     }
 
@@ -553,15 +569,14 @@ public class InventoryItemServiceImpl implements InventoryItemService {
     }
 
     @Override
-    public List<InventoryModel.ExportDetail> getInventoryExportList(String facilityId) {
-        List<ShipmentItem> shipmentItems = shipmentItemRepo.findAllByFacility(new Facility(facilityId));
-        List<InventoryItemDetail> inventoryItemDetails = inventoryItemDetailRepo.findAllByOrderItemIn(shipmentItems
-                                                                                                          .stream()
-                                                                                                          .map(
-                                                                                                              ShipmentItem::getOrderItem)
-                                                                                                          .collect(
-                                                                                                              Collectors
-                                                                                                                  .toList()));
+    public List<InventoryModel.ExportDetail> getInventoryExportList(String facilityId, UserLogin userLogin) {
+        Facility facility = facilityRepo.findById(facilityId).orElseThrow(NoSuchElementException::new);
+        List<ShipmentItem> shipmentItems = shipmentItemRepo.findAllByFacilityAndUserLogin(facility, userLogin);
+        List<InventoryItemDetail> inventoryItemDetails =
+            inventoryItemDetailRepo.findAllByOrderItemIn(shipmentItems
+                                                             .stream()
+                                                             .map(ShipmentItem::getOrderItem)
+                                                             .collect(Collectors.toList()));
         return inventoryItemDetails
             .stream()
             .map(InventoryItemDetail::toInventoryExportDetail)
